--- a/wid-card-machine-status.html
+++ b/wid-card-machine-status.html
@@ -27,6 +27,7 @@ Example:
       :host {
         display: block;
         height: 100%;
+        /*margin: 5px;*/
         box-sizing: border-box;
       }
 
@@ -42,7 +43,7 @@ Example:
       }
 
       #header-container iron-icon {
-        --iron-icon-height: 100%;
+        /*--iron-icon-height: 100%;*/
       }
 
       #cpu-container {
@@ -59,31 +60,44 @@ Example:
 
       #cpu-container  .row-icon iron-icon,
       #status-container  .row-icon iron-icon {
-        --iron-icon-width: 70%;
+        --iron-icon-width: calc(100%/2);
       }
 
       .scale-icon {
         --iron-icon-height: 80%;
       }      
     </style>
-    
-    <paper-material class="layout vertical" elevation="3">
 
-      <div id="header-container" class="layout horizontal flex center-center">
+
+    <div id="websockets">
+
+      <!-- This is a requirement of `wid-card-subscriptions-behavior` -->
+      <!-- one websocket element for each subscribed channel -->
+      <template is="dom-repeat" items="[[websockets]]" as="ws">
+        <wid-versatile-websocket url="[[ws.url]]" token="[[ws.token]]" subscription="[[ws.subscription]]" on-data="_onData">
+        </wid-versatile-websocket>
+      </template>
+
+    </div>    
+
+    <paper-material class="layout vertical flex" elevation="3">
+
+      <div id="header-container" class="layout horizontal flex-3 center-center">
         <div class="flex"></div>
         <iron-icon class="scale-icon flex-3" src="server.svg"></iron-icon>
-        <div class="row-value layout horizontal flex-8 center-center"><content select="h1">[[name]]</content></div>
+        <div class="row-value layout horizontal flex-8 center-center">[[name]]</div>
       </div>
 
-      <div id="cpu-container" class="layout horizontal flex">
+      <div id="cpu-container" class="layout horizontal flex-5">
         <div class="row-icon flex layout vertical center-center"><iron-icon class="scale-icon" src="cpu.svg"></iron-icon></div>
         <div class="row-value layout horizontal center-center flex-5">[[cpu]]</div>
       </div>
 
-      <div id="status-container" class="layout horizontal flex">
+      <div id="status-container" class="layout horizontal flex-5">
         <div class="row-icon flex layout vertical center-center"><iron-icon class="scale-icon" src="deploy.svg"></iron-icon></div>
         <div class="row-value layout horizontal flex-5 center-center">[[status]]</div>
       </div>
+
 
     </paper-material>
 
