--- a/wid-card-machine-status.html
+++ b/wid-card-machine-status.html
@@ -2,6 +2,7 @@
 
 <link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../paper-material/paper-material.html">
+<link rel="import" href="../paper-progress/paper-progress.html">
 <link rel="import" href="../paper-styles/paper-styles-classes.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 
