--- a/wid-card-machine-status.html
+++ b/wid-card-machine-status.html
@@ -52,11 +52,11 @@ Example:
         background-color: #eaeaea;
       }
 
-      #cpu-container .row-icon {
+      .cpu-container-icon {
         background-color: #e8621a;
       }
 
-      #status-container  .row-icon {
+      .status-container-icon {
         background-color: #e65100;
       }
 
@@ -78,12 +78,15 @@ Example:
       }
 
       .custom-progess {
-         width: 100%;
-         height: 100%;
-         left: 0px;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0px;
+      }
+
+       .custom-paper-progess {
          --paper-progress-height: 100%;
          --paper-progress-active-color: #cacaca;
-         position: absolute;
       }
     </style>
 
@@ -106,15 +109,15 @@ Example:
       </div>
 
       <div id="cpu-container" class="layout horizontal flex-5">
-        <div class="row-icon flex layout vertical center-center"><iron-icon class="scale-icon" src="cpu.svg"></iron-icon></div>
+        <div class="row-icon cpu-container-icon flex layout vertical center-center"><iron-icon class="scale-icon" src="cpu.svg"></iron-icon></div>
         <div class="row-value layout horizontal center-center flex-5 paperProgressContainer">
           <div class="paperProgressValue">[[_percentValue(cpu)]]</div>
-          <paper-progress id="paperProgress" class="custom-progess transiting flex" value="[[cpu]]"></paper-progress>
+          <paper-progress id="paperProgress" class="custom-progess custom-paper-progess transiting flex" value="[[cpu]]"></paper-progress>
         </div>
       </div>
 
       <div id="status-container" class="layout horizontal flex-5">
-        <div class="row-icon flex layout vertical center-center"><iron-icon class="scale-icon" src="deploy.svg"></iron-icon></div>
+        <div class="row-icon status-container-icon flex layout vertical center-center"><iron-icon class="scale-icon" src="deploy.svg"></iron-icon></div>
         <div class="row-value layout horizontal flex-5 center-center">[[status]]</div>
       </div>
 
