--- a/wid-card-machine-status.html
+++ b/wid-card-machine-status.html
@@ -8,6 +8,7 @@
 
 <link rel="import" href="../wid-card-standard-behavior/wid-card-standard-behavior.html">
 <link rel="import" href="../wid-card-weight-behavior/wid-card-weight-behavior.html">
+<link rel="import" href="../wid-card-theme-behavior/wid-card-theme-behavior.html">
 <link rel="import" href="../wid-versatile-websocket/wid-versatile-websocket.html">
 <link rel="import" href="../wid-card-subscriptions-behavior/wid-card-subscriptions-behavior.html">
 
@@ -36,6 +37,7 @@ Example:
         overflow-y: auto;
         height: 100%;
         background-color: #fff;
+        overflow: visible;
       }
 
       #header-container {
@@ -100,7 +102,7 @@ Example:
       </template>
     </div>    
 
-    <paper-material class="layout vertical flex" elevation="3">
+    <paper-material id="mainContent" class="layout vertical flex" elevation="3">
 
       <div id="header-container" class="layout horizontal flex-3 center-center">
         <div class="flex"></div>
